# diffusion-modeling-agent

./: .gitignore  LICENSE  README.md  agent.py  pyproject.toml  system_prompt.py  validators.py
data/: adoption_synthetic.csv  adoption_synthetic.meta.json  generate_synthetic.py
examples/: sample_run.md
models/: _shared.py  model_01_geometric.py  model_02_pareto_ii.py  model_03_burr_xii.py  model_04_pareto_ii_exposure.py  model_05_burr_xii_exposure.py  model_06_burr_xii_log_exposure.py  model_07_burr_xii_lagged_exposure.py  model_08_burr_xii_exposure_season_dummy.py  model_09_burr_xii_exposure_season_FINAL.py  model_10_burr_xii_lagged_exposure_season.py  model_11_burr_xii_both_exposure_season.py  model_12_burr_xii_exposure_season_two.py  model_13_burr_xii_exposure_buildup_peak_recovery.py  model_14_burr_xii_lagged_exposure_season.py  model_15_holdout_validation.py  model_16_burr_xii_exposure_season_2segment.py
tests/: conftest.py  test_models.py
