[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-modeling-agent"
version = "0.1.0"
description = "A hand-rolled ReAct orchestrator that fits, validates, and reports aggregate timing-to-adoption models autonomously."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Marcos Narváez" },
]
keywords = ["agents", "anthropic", "claude", "react", "diffusion", "hazard-models", "MLE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "anthropic>=0.40",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/marcosnarvaez/diffusion-modeling-agent"

[tool.setuptools]
py-modules = ["agent", "system_prompt", "validators"]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
